[package]
name = "mfnf_template_spec"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]
edition = "2018"

[dependencies]
mwparser_utils = { git = "https://github.com/serlo/mediawiki-parser-utils" }
mwparser_utils_derive = { git = "https://github.com/serlo/mediawiki-parser-utils" }
mediawiki_parser = "0.4"
serde = "1.0"
serde_derive = "1.0"
